documentation and minor redesign

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -123,11 +123,12 @@ labelUnknownError=Unknown Error. Please check the logfiles.\nCause: {0}
 ###############################################################################
 # View / Wizard / Editor specific resources
 ###############################################################################
+AbstractAccountingHandler_errorGettingSelection=Error running command for selection, please check the logfile for details!
+
 AbstractClientHandler_text=No client selected
 AbstractClientHandler_message=Please select a client to delete
 
 AbstractInvoiceHandler_errorNoInvoiceInCurrentEditor=No invoice in current editor\!
-AbstractInvoiceHandler_errorNoInvoiceInSelection=No invoice in current selection\!
 
 AbstractTimeFrameSelectionHandler_useTimeFrame=Constrict query to time frame
 
