--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -107,11 +107,12 @@ labelUnknownError=Unbekannter Fehler. Bitte pr\u00FCfen Sie die Logdatei.\nGrund
 ###############################################################################
 # View / Wizard / Editor specific resources
 ###############################################################################
+AbstractAccountingHandler_errorGettingSelection=Aktion kann f\u00FCr Auswahl nicht durchgef\u00FChrt werden, bitte Logdatei f\u00FCr Details pr\u00FCfen!
+
 AbstractClientHandler_text=Kein Kunde ausgew\u00E4hlt
 AbstractClientHandler_message=Bitte w\u00E4hlen Sie einen Kunden zum l\u00F6schen aus
 
 AbstractInvoiceHandler_errorNoInvoiceInCurrentEditor=Keine Rechnung im aktiven Editor\!
-AbstractInvoiceHandler_errorNoInvoiceInSelection=Keine Rechnung ausgew\u00E4lt\!
 
 AbstractTimeFrameSelectionHandler_useTimeFrame=Suche auf Zeitraum einschr\u00E4nken
 
