CodeCleanup: rename all handler implementations

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -74,7 +74,7 @@ command.deleteClient.name = Delete Client
 command.viewExpenses.label = View Expenses
 commandCategory.expense.name = Expense Command Category
 command.newExpense.name = New Expense...
-command.changeExpensesViewTimeFrame.name = Timeframe...
+command.changeExpensesViewFilter.name = Filter...
 command.openExpenseDialog.name = Expenses
 command.editExpense.name = Edit Expense...
 command.editMultipleExpenses.name = Edit multiple expenses...
