--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -72,7 +72,7 @@ command.deleteClient.name = Kunde löschen
 # COMMANDS - EXPENSES
 command.viewExpenses.label = Ausgaben
 command.newExpense.name = Neue Ausgabe...
-command.changeExpensesViewTimeFrame.name = Zeitraum...
+command.changeExpensesViewFilter.name = Filter...
 command.openExpenseDialog.name = Ausgaben
 command.editExpense.name = Ausgabe bearbeiten...
 command.editMultipleExpenses.name = Mehrere Ausgaben bearbeiten...
