added additional recipient info line to Address entity, including import/export and documents

--- a/accounting-ui/src/de/togginho/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages.properties
@@ -86,6 +86,7 @@ labelPresets=Presets:
 labelPresetsNone=None / Custom
 labelPricePerUnit=Price per Unit
 labelQuantity=Quantity
+labelRecipientDetail=Recipient Detail:
 labelRevenue=Revenue
 labelRevenueRelevant=Revenue-relevant
 labelScrapValue=Scrap Value
