--- a/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/togginho/accounting/ui/messages_de.properties
@@ -70,6 +70,7 @@ labelPresets=Voreinstellungen
 labelPresetsNone=Keine / Benutzerdefiniert
 labelPricePerUnit=Einzelpreis
 labelQuantity=Anzahl
+labelRecipientDetail=Adresszusatz:
 labelRevenue=Umsatz
 labelRevenueRelevant=Umsatzrelevant
 labelScrapValue=Restwert
