references editor / started report template

--- a/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages.properties
@@ -53,6 +53,11 @@ invoiceTotalNet=Sub-Total:
 invoiceTotalTax=Sales Tax:
 paymentTermsTRADE_CREDIT=Payment Terms: Net {0}.
 
+Reference_Customer=Customer:
+Reference_Project=Project:
+Reference_Tasks=Tasks:
+Reference_Description=Description:
+
 RevenueReportGenerator_clientTitle=Client
 RevenueReportGenerator_invoiceDate=Invoice date
 RevenueReportGenerator_invoiceNumberTitle=Invoice no.
@@ -75,6 +80,7 @@ taxAmountTitle=VAT amount
 taxRateTitle=VAT perc.
 taxTitle=VAT
 taxes=Taxes
+timeFrame=Time frame:
 untilTitle=Until:
 
 from=From: {0}
