--- a/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages_de.properties
@@ -53,6 +53,11 @@ invoiceTotalNet=Summe netto gesamt:
 invoiceTotalTax=Summe Umsatzsteuer:
 paymentTermsTRADE_CREDIT=Zahlungsbedingungen: {0} Tage rein netto.
 
+Reference_Customer=Kunde:
+Reference_Project=Projekt:
+Reference_Tasks=Aufgaben:
+Reference_Description=Beschreibung:
+
 RevenueReportGenerator_clientTitle=Kunde
 RevenueReportGenerator_invoiceDate=Rechnungsdatum
 RevenueReportGenerator_invoiceNumberTitle=Rechnungsnr.
@@ -81,6 +86,7 @@ taxAmountTitle=USt. Summe
 taxRateTitle=USt.
 taxTitle=USt.
 taxes=Steuern
+timeFrame=Zeitraum:
 untilTitle=Bis:
 
 from=Von: {0}
