--- a/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
@@ -124,6 +124,9 @@ labelUnknownError=Unknown Error. Please check the logfiles.\nCause: {0}
 ###############################################################################
 # View / Wizard / Editor specific resources
 ###############################################################################
+
+AbstractAccountingEdior_errorSavesAsNotSupported=\"Save As\" is not supported!
+
 AbstractAccountingHandler_errorGettingSelection=Error running command for selection, please check the logfile for details!
 
 AbstractClientHandler_text=No client selected
@@ -185,6 +188,20 @@ CopyInvoiceCommand_dialogTitle=Copy invoice
 CopyInvoiceCommand_errorEmptyInvoiceNumber=New invoice number cannot be empty\!
 CopyInvoiceCommand_errorExistingInvoice=An invoice with that number already exists, please enter a different one
 CopyInvoiceCommand_errorOpeningEditor=Couldn't open editor for copied invoice
+
+CVEditor_header=Resume / Curriculum Vitae
+CVEditor_entryCustomer=Customer:
+CVEditor_entryDescription=Description:
+CVEditor_entryTasks=Tasks:
+CVEditor_entryTitle=Title:
+CVEditor_entryListText=CV Entries / References
+CVEditor_entryListDescrition=Overview of references / projects
+CVEditor_entryDetailsText=Reference Details
+CVEditor_entryDetailsDescription=Edit details of the selected reference/project
+CVEditor_addEntryDialogTitle=New Reference
+CVEditor_addEntryDialogMessage=Enter the title of the new reference/project
+CVEditor_addEntryDialogSuggestion=NewEntry
+CVEditor_addEntryDialogValidatorMessage=Please enter at least one character
 
 DeleteClientCommand_confirmMessage=Are you sure you want to delete your client \"{0}\"?
 DeleteClientCommand_confirmText=Confirm delete
@@ -290,6 +307,9 @@ MultiEditExpensesHandler_message=Make desired changes and select the expenses on
 MultiEditExpensesHandler_apply=Apply
 MultiEditExpensesHandler_errorNoChanges=There are no changes to any data fields.\nAt least one field has to be edited for the selected expenses to be saved.
 MultiEditExpensesHandler_errorNoExpensesSelected=At least one expense has to be selected in the lower table. 
+
+MultiPageUserEditor_pageUser=User
+MultiPageUserEditor_pageProfile=Profile/CV
 
 NewClientWizard_windowTitle=Create a new client...
 NewClientWizard_unknownErrorMsg=Error saving Client
