--- a/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
@@ -108,6 +108,9 @@ labelUnknownError=Unbekannter Fehler. Bitte pr\u00FCfen Sie die Logdatei.\nGrund
 ###############################################################################
 # View / Wizard / Editor specific resources
 ###############################################################################
+
+AbstractAccountingEdior_errorSavesAsNotSupported=\"Speichern Unter\" wird nicht unterstützt!
+
 AbstractAccountingHandler_errorGettingSelection=Aktion kann f\u00FCr Auswahl nicht durchgef\u00FChrt werden, bitte Logdatei f\u00FCr Details pr\u00FCfen!
 
 AbstractClientHandler_text=Kein Kunde ausgew\u00E4hlt
@@ -169,6 +172,20 @@ CopyInvoiceCommand_dialogTitle=Rechnung kopieren
 CopyInvoiceCommand_errorEmptyInvoiceNumber=Neue Rechnungsnummer kann nicht leer sein\!
 CopyInvoiceCommand_errorExistingInvoice=Eine Rechnung mit dieser Nummer existiert bereits.\nBitte w\u00E4hlen Sie eine andere Nummer.
 CopyInvoiceCommand_errorOpeningEditor=Fehler beim \u00D6ffnen der neuen Rechnung.
+
+CVEditor_header=Lebenslauf / Referenzen
+CVEditor_entryCustomer=Kunde:
+CVEditor_entryDescription=Beschreibung:
+CVEditor_entryTasks=Aufgaben:
+CVEditor_entryTitle=Titel:
+CVEditor_entryListText=Referenzen
+CVEditor_entryListDescrition=\u00DCbersicht Referenzen und Projekte
+CVEditor_entryDetailsText=Referenzdetails
+CVEditor_entryDetailsDescription=Details zu ausgew\u00E4hlter Referenz/Projekt bearbeiten
+CVEditor_addEntryDialogTitle=Neue Referenz
+CVEditor_addEntryDialogMessage=Geben Sie den Titel der neuen Referenz/des neuen Projekts ein
+CVEditor_addEntryDialogSuggestion=NeuerEintrag
+CVEditor_addEntryDialogValidatorMessage=Bitte geben Sie wenigstens einen Buchstaben ein
 
 DeleteClientCommand_confirmMessage=Sind Sie sicher, dass Sie ihren Kunden \"{0}\" l\u00F6schen wollen?
 DeleteClientCommand_confirmText=L\u00F6schen best\u00E4tigen
@@ -274,6 +291,9 @@ MultiEditExpensesHandler_message=\u00C4nderungen auf ausgew\u00E4hlte Ausgaben a
 MultiEditExpensesHandler_apply=Auswahl
 MultiEditExpensesHandler_errorNoChanges=Sie haben keine \u00C4nderungen gemacht, die gespeichert werden k\u00F6nnen.
 MultiEditExpensesHandler_errorNoExpensesSelected=Mindestens eine Ausgabe muss gew\u00E4hlt werden, auf die \u00C4nderungen angewand werden soll.
+
+MultiPageUserEditor_pageUser=Benutzer
+MultiPageUserEditor_pageProfile=Profil
 
 NewClientWizard_windowTitle=Neuen Kunden erstellen...
 NewClientWizard_unknownErrorMsg=Fehler beim Speichern des Kunden.
