references report first shot

--- a/accounting-reporting/OSGI-INF/l10n/bundle.properties
+++ b/accounting-reporting/OSGI-INF/l10n/bundle.properties
@@ -22,3 +22,4 @@ report.cashFlowStatement.name = Cash Flow Statement
 report.revenue.name = Revenue
 report.expenses.name = Expenses
 report.incomeStatement.name = Income Statement
+report.references.name = References
