--- a/accounting-reporting/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-reporting/OSGI-INF/l10n/bundle_de.properties
@@ -22,3 +22,4 @@ report.cashFlowStatement.name = Kapitalfluss
 report.revenue.name = Umsatz
 report.expenses.name = Ausgaben
 report.incomeStatement.name = Abschlussbericht
+report.references.name = Referenzen
