--- a/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages.properties
@@ -58,6 +58,8 @@ Reference_Project=Project:
 Reference_Tasks=Tasks:
 Reference_Description=Description:
 
+References_Title=Projects / References
+
 RevenueReportGenerator_clientTitle=Client
 RevenueReportGenerator_invoiceDate=Invoice date
 RevenueReportGenerator_invoiceNumberTitle=Invoice no.
