--- a/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages_de.properties
@@ -58,6 +58,8 @@ Reference_Project=Projekt:
 Reference_Tasks=Aufgaben:
 Reference_Description=Beschreibung:
 
+References_Title=Projekte / Referenzen
+
 RevenueReportGenerator_clientTitle=Kunde
 RevenueReportGenerator_invoiceDate=Rechnungsdatum
 RevenueReportGenerator_invoiceNumberTitle=Rechnungsnr.
