--- a/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages.properties
+++ b/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages.properties
@@ -57,6 +57,7 @@ Reference_Customer=Customer:
 Reference_Project=Project:
 Reference_Tasks=Tasks:
 Reference_Description=Description:
+Reference_Since=since
 
 References_Title=Projects / References
 
