--- a/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages_de.properties
+++ b/accounting-reporting/src/de/tfsw/accounting/reporting/internal/messages_de.properties
@@ -57,6 +57,7 @@ Reference_Customer=Kunde:
 Reference_Project=Projekt:
 Reference_Tasks=Aufgaben:
 Reference_Description=Beschreibung:
+Reference_Since=seit
 
 References_Title=Projekte / Referenzen
 
