added attribute "isVAT" to TaxRate

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -50,6 +50,7 @@ view.expenses = Expenses
 new.client.wizard.label = New Client
 new.invoice.wizard.label = New Invoice
 new.expense.wizard.label = New Expense
+new.taxRate.wizard.label = New tax rate
 import.expenses.wizard = Import Expenses
 export.model.wizard = Export Data
 
