--- a/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
@@ -323,6 +323,7 @@ NewInvoiceWizardPage_title=Invoice number and client
 NewTaxRateWizard_abbreviation=Abbreviation:
 NewTaxRateWizard_description=Create a new tax rate for use in your invoices
 NewTaxRateWizard_errorMessageTitle=Illegal percentage\!
+NewTaxRateWizard_isVAT=VAT / GST (deductible)
 NewTaxRateWizard_pageTitle=New Tax Rate
 NewTaxRateWizard_rate=Rate:
 NewTaxRateWizard_windowTitle=New Tax Rate
