--- a/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
@@ -307,6 +307,7 @@ NewInvoiceWizardPage_title=Rechnungsnummer und Kunde
 NewTaxRateWizard_abbreviation=Abk\u00FCrzung:
 NewTaxRateWizard_description=Erstellen Sie einen neuen Steuersatz f\u00FCr Ihre Rechnungen.
 NewTaxRateWizard_errorMessageTitle=Ung\u00FCltiger Prozentwert\!
+NewTaxRateWizard_isVAT=Umsatz- / Mehrwertsteuer (Vorsteuer)
 NewTaxRateWizard_pageTitle=Neuer Steuersatz
 NewTaxRateWizard_rate=Satz:
 NewTaxRateWizard_windowTitle=Neuer Steuersatz
