--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -50,6 +50,7 @@ view.expenses = Ausgaben
 new.client.wizard.label = Neuer Kunde
 new.invoice.wizard.label = Neue Rechnung
 new.expense.wizard.label = Neue Ausgabe
+new.taxRate.wizard.label = Neuer Steuersatz
 import.expenses.wizard = Ausgaben importieren
 export.model.wizard = Daten exportieren
 
