licensing and branding added new project for master image files changed splash and about images

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -121,8 +121,24 @@ command.reports.letterhead = Letterhead
 preferences.accounting=Accounting
 preferences.reporting=Reporting
 
-aboutTextBla=tfsw.de Accounting\n\
+aboutTextBla=tfsw.de accounting\n\
 \n\
-Version: 1.1.0\n\
+Version: 1.2.0\n\
 \n\
-(c) 2010,2014 Thorsten Frank. Visit http://www.tfsw.de
+(c) 2010,2015 Thorsten Frank. Visit http://www.tfsw.de\n\
+\n\
+Contains software developed at\n\
+The Eclipse Foundation (http://www.eclipse.org/).\n\
+\n\
+Contains software developed at\n\
+The Apache Software Foundation (http://www.apache.org/).\n\
+\n\
+Fonts used on documents are Titillium\n\
+by the Accademia die Belle Arti di Urbino (http://www.campivisivi.net/titillium).\n\
+\n\
+Icons used are from the Silk icon set 1.3\n\
+by Mark James (http://www.famfamfam.com/lab/icons/silk/)\n\
+Licensed under a Creative Commons Attribution 2.5 License\n\
+\n\
+Contains software developed by\n\
+Jaspersoft (https://community.jaspersoft.com/project/jasperreports-library)
