xml file index moved to constants i18n

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -1,3 +1,4 @@
+
 f###############################################################################
 # Copyright 2011, 2014 thorsten frank (thorsten.frank@tfsw.de).
 #
@@ -39,6 +40,7 @@ menu.help.about.label = About
 # EDITORS
 editor.user.name = User Editor
 editor.client.name = Client Editor
+editor.expense.name = Expense Editor
 editor.invoice.name = View / Edit Invoice
 
 # VIEWS
@@ -87,6 +89,7 @@ command.changeTimeFrame.currentYear = Current Year
 command.changeTimeFrame.lastYear = Last Year
 command.changeTimeFrame.custom = Custom...
 command.expenses.report = Create expense report
+command.expenseView.menu.pulldown = Expenses Pulldown Menu
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
@@ -117,15 +120,27 @@ command.reports.cashFlow.name = Cash Flow Statement
 command.reports.incomeStatement.name = Income Statement
 command.reports.letterhead = Letterhead
 
+# COMMANDS - REFERENCES
+command.references.export = References
+
 # PREFERENCES
 preferences.accounting=Accounting
 preferences.reporting=Reporting
 
+# EXTENSION POINTS
+reportHandlers.extension.point.name = Report Handlers
+
+# COMMAND CATEGORIES
+context.expense.name = Expense Context
+context.client.name = Client context
+context.invoice.name = Invoice context
+
+# ABOUT TEXT
 aboutTextBla=tfsw.de accounting\n\
 \n\
 Version: 1.2.0\n\
 \n\
-(c) 2010,2015 Thorsten Frank. Visit http://www.tfsw.de\n\
+(c) 2010,2015 Thorsten Frank (accounting@www.tfsw.de)\n\
 \n\
 Contains software developed at\n\
 The Eclipse Foundation (http://www.eclipse.org/).\n\
