--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -39,6 +39,7 @@ menu.help.about.label = Über...
 # EDITORS
 editor.user.name = Benutzer
 editor.client.name = Kunden
+editor.expense.name = Ausgaben
 editor.invoice.name = Rechnung ansehen / bearbeiten
 
 # VIEWS
@@ -85,6 +86,7 @@ command.changeTimeFrame.currentYear = Aktuelles Jahr
 command.changeTimeFrame.lastYear = Letztes Jahr
 command.changeTimeFrame.custom = Auswahl...
 command.expenses.report = Ausgabenbericht Erzeugen
+command.expenseView.menu.pulldown = Expenses Pulldown Menu
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
@@ -112,6 +114,9 @@ command.reports.name = Berichte...
 command.reports.cashFlow.name = Kapitalfluss
 command.reports.incomeStatement.name = GuV
 command.reports.letterhead = Briefkopf
+
+# COMMANDS - REFERENCES
+command.references.export = Referenzen
 
 # PREFERENCES
 preferences.accounting=Accounting
