finished ELSTER UI redesign - now including all relevant wizard pages

--- a/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages_de.properties
+++ b/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages_de.properties
@@ -14,10 +14,8 @@
 # limitations under the License.
 ###############################################################################
 
-AbstractElsterExportWizardPage_icon=icons/elster_150x90.png
-
 #
-ElsterExportWizard_Title=ELSTER UStVA Wizard
+ElsterExportWizard_Title=ELSTER Umsatzsteuer-Voranmeldung
 
 #
 AddressPage_City=Stadt:
