--- a/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages.properties
+++ b/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages.properties
@@ -14,12 +14,14 @@
 # limitations under the License.
 ###############################################################################
 
+# The general icon used throughout the ELSTER export wizard - there is no need to localize this in language-specific
+# subsets
 AbstractElsterWizardPage_icon=icons/elster_150x90.png
 
-#
+# Window title used throughout the wizard
 ElsterExportWizard_Title=ELSTER UStVA Wizard
 
-#
+# Address Page labels
 AddressPage_City=City:
 AddressPage_Country=Country:
 AddressPage_Description=Check and adjust your address and contact data if necessary.\nNote that only addresses in Germany are supported at the moment
@@ -29,7 +31,7 @@ AddressPage_Street=Street:
 AddressPage_Title=Address Data
 AddressPage_ZIPCode=Postal Code:
 
-#
+# Amounts Page labels
 AmountsPage_Description=Overview of revenue and input tax amounts to be reported
 AmountsPage_InputTax=Input Tax Amounts:
 AmountsPage_Kz66=(Kz 66)
@@ -43,7 +45,7 @@ AmountsPage_Title=Amounts
 AmountsPage_VAT19=at 19% VAT:
 AmountsPage_VAT7=at 7% VAT:
 
-#
+# Company Page labels
 CompanyNamePage_CompanyName=Company Name:
 CompanyNamePage_Description=Name and Tax Number of company
 CompanyNamePage_Email=Email:
@@ -55,13 +57,13 @@ CompanyNamePage_TaxNoGenerated=Tax Number (generated):
 CompanyNamePage_TaxNoOrig=Tax Number (original):
 CompanyNamePage_Title=Basic Data
 
-#
+# Export page labels
 ExportTargetSelectionPage_Description=Select target file for XML export.\nPress \'Finish\' to export.
 ExportTargetSelectionPage_FileSelectionLabel=...
 ExportTargetSelectionPage_TargetFile=File:
 ExportTargetSelectionPage_Title=Select Export Target
 
-#
+# Period selection page labels
 TimeFrameSelectionPage_Description=Select the time period for which to report input and output VAT
 TimeFrameSelectionPage_Period=Period:
 TimeFrameSelectionPage_Title=Reporting Period
