--- a/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages.properties
+++ b/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages.properties
@@ -51,6 +51,9 @@ CompanyNamePage_Description=Name and Tax Number of company
 CompanyNamePage_Email=Email:
 CompanyNamePage_FirstName=First Name:
 CompanyNamePage_LastName=Last Name:
+CompanyNamePage_GroupName=Company / Person Names
+CompanyNamePage_GroupContactInfo=Contact Information
+CompanyNamePage_GroupTax=Revenue Service / Tax Number
 CompanyNamePage_Phone=Phone:
 CompanyNamePage_State=German State of\nRevenue Service Branch (*)
 CompanyNamePage_TaxNoGenerated=Tax Number (generated):
@@ -60,6 +63,7 @@ CompanyNamePage_Title=Basic Data
 # Export page labels
 ExportTargetSelectionPage_Description=Select target file for XML export.\nPress \'Finish\' to export.
 ExportTargetSelectionPage_FileSelectionLabel=...
+ExportTargetSelectionPage_Preview=Preview:
 ExportTargetSelectionPage_TargetFile=File:
 ExportTargetSelectionPage_Title=Select Export Target
 
