--- a/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages_de.properties
+++ b/accounting-elster-ui/src/de/tfsw/accounting/elster/ui/wizard/messages_de.properties
@@ -46,6 +46,9 @@ CompanyNamePage_CompanyName=Unternehmensname:
 CompanyNamePage_Description=Namen und Steuernummer des Unternehmenes
 CompanyNamePage_Email=Email:
 CompanyNamePage_FirstName=Vorname:
+CompanyNamePage_GroupName=Firmen- / Personenname
+CompanyNamePage_GroupContactInfo=Kontaktdaten
+CompanyNamePage_GroupTax=Finanzamt / Steuernummer
 CompanyNamePage_LastName=Nachname:
 CompanyNamePage_Phone=Telefonnr:
 CompanyNamePage_State=Bundesland des\nzuständigen Finanzamts (*)
@@ -56,6 +59,7 @@ CompanyNamePage_Title=Basisdaten
 #
 ExportTargetSelectionPage_Description=Wählen Sie eine Zieldatei für den Export aus.\nDrücken Sie 'Finish' zum exportieren des XML.
 ExportTargetSelectionPage_FileSelectionLabel=...
+ExportTargetSelectionPage_Preview=Vorschau:
 ExportTargetSelectionPage_TargetFile=Zieldatei:
 ExportTargetSelectionPage_Title=Ziel wählen
 
