moved Frequency enum to own class file and added i18n

--- a/accounting-core/src/de/tfsw/accounting/messages.properties
+++ b/accounting-core/src/de/tfsw/accounting/messages.properties
@@ -93,6 +93,14 @@ ExpenseType_CAPEX=Capital Expenses
 ExpenseType_OTHER=Other Expenses
 
 ###############################################################################
+# Frequency types
+###############################################################################
+Frequency_DAILY=Daily
+Frequency_WEEKLY=Weekly
+Frequency_MONTHLY=Monthly
+Frequency_YEARLY=Yearly
+
+###############################################################################
 # Depreciation Methods
 ###############################################################################
 DepreciationMethod_STRAIGHTLINE=Straight-line
