--- a/accounting-core/src/de/tfsw/accounting/messages_de.properties
+++ b/accounting-core/src/de/tfsw/accounting/messages_de.properties
@@ -101,6 +101,14 @@ ExpenseType_CAPEX=Investitionsausgaben
 ExpenseType_OTHER=Sonstige Ausgaben
 
 ###############################################################################
+# Frequency types
+###############################################################################
+Frequency_DAILY=T\u00E4glich
+Frequency_WEEKLY=W\u00D6chentlich
+Frequency_MONTHLY=Monatlich
+Frequency_YEARLY=J\u00E4hrlich
+
+###############################################################################
 # Depreciation Methods
 ###############################################################################
 DepreciationMethod_STRAIGHTLINE=Linear
