--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -52,6 +52,7 @@ view.expenses = Expenses
 new.client.wizard.label = New Client
 new.invoice.wizard.label = New Invoice
 new.expense.wizard.label = New Expense
+new.recurringExpense.wizard.label = New Recurring Expense
 new.taxRate.wizard.label = New tax rate
 import.expenses.wizard = Import Expenses
 export.model.wizard = Export Data
