--- a/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
@@ -328,6 +328,18 @@ NewTaxRateWizard_pageTitle=New Tax Rate
 NewTaxRateWizard_rate=Rate:
 NewTaxRateWizard_windowTitle=New Tax Rate
 
+RecurrenceRuleWizardPage_Desc=Define the rules when and how often the template should be applied
+RecurrenceRuleWizardPage_Title=Recurrence Rules
+RecurringExpenseEditHelper_active=Active
+RecurringExpenseEditHelper_count=Number of times
+RecurringExpenseEditHelper_forever=Forever
+RecurringExpenseEditHelper_frequency=Frequency
+RecurringExpenseEditHelper_interval=Interval
+RecurringExpenseEditHelper_validFrom=Valid From
+RecurringExpenseWizard_Title=Recurring Expense Template
+RecurringExpenseWizardPage_Desc=Define the template for a recurring expense
+RecurringExpenseWizardPage_Title=Expense Template
+
 ReportGenerationUtil_errorGeneratingInvoice=Error generating PDF for invoice!
 ReportGenerationUtil_errorNoReportingService=Reporting service not found, please check your installation!
 ReportGenerationUtil_successMsg=PDF successfully generated to\n\"{0}\".
