--- a/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
@@ -109,7 +109,7 @@ labelUnknownError=Unbekannter Fehler. Bitte pr\u00FCfen Sie die Logdatei.\nGrund
 # View / Wizard / Editor specific resources
 ###############################################################################
 
-AbstractAccountingEdior_errorSavesAsNotSupported=\"Speichern Unter\" wird nicht unterstützt!
+AbstractAccountingEdior_errorSavesAsNotSupported=\"Speichern Unter\" wird nicht unterst\u00FCtzt!
 
 AbstractAccountingHandler_errorGettingSelection=Aktion kann f\u00FCr Auswahl nicht durchgef\u00FChrt werden, bitte Logdatei f\u00FCr Details pr\u00FCfen!
 
@@ -311,6 +311,18 @@ NewTaxRateWizard_isVAT=Umsatz- / Mehrwertsteuer (Vorsteuer)
 NewTaxRateWizard_pageTitle=Neuer Steuersatz
 NewTaxRateWizard_rate=Satz:
 NewTaxRateWizard_windowTitle=Neuer Steuersatz
+
+RecurrenceRuleWizardPage_Desc=Regeln zur wiederholten Anwendung der Vorlage definieren.
+RecurrenceRuleWizardPage_Title=Anwendungsregeln
+RecurringExpenseEditHelper_active=Aktiv
+RecurringExpenseEditHelper_count=Anzahl
+RecurringExpenseEditHelper_forever=Endlos
+RecurringExpenseEditHelper_frequency=Frequenz
+RecurringExpenseEditHelper_interval=Intervall
+RecurringExpenseEditHelper_validFrom=G\u00FCltig ab
+RecurringExpenseWizard_Title=Wiederkehrende Ausgabe
+RecurringExpenseWizardPage_Desc=Vorlage f\u00FCr wiederkehrende Ausgaben definieren
+RecurringExpenseWizardPage_Title=Ausgabenvorlage
 
 ReportGenerationUtil_errorGeneratingInvoice=Fehler beim Generieren des PDF Dokuments!
 ReportGenerationUtil_errorNoReportingService=Reporting Service ist nicht verf\u00FCgbar, bitte \u00FCberpr\u00FCfen Sie Ihre Installation!
