Renamed recurring expenses to expense templates, added delete command

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -47,12 +47,13 @@ editor.invoice.name = View / Edit Invoice
 view.clients = Clients
 view.invoices = Invoices
 view.expenses = Expenses
+view.expenseTemplates = Expense Templates
 
 # WIZARDS
 new.client.wizard.label = New Client
 new.invoice.wizard.label = New Invoice
 new.expense.wizard.label = New Expense
-new.recurringExpense.wizard.label = New Recurring Expense
+new.expenseTemplate.wizard.label = New Expense Template
 new.taxRate.wizard.label = New tax rate
 import.expenses.wizard = Import Expenses
 export.model.wizard = Export Data
@@ -91,6 +92,11 @@ command.changeTimeFrame.lastYear = Last Year
 command.changeTimeFrame.custom = Custom...
 command.expenses.report = Create expense report
 command.expenseView.menu.pulldown = Expenses Pulldown Menu
+
+# COMMANDS - EXPENSE TEMPLATES	
+commandCategory.expense.template.name = Expense Template Command Category
+command.newExpenseTemplate.name = New Expense Template...
+command.deleteExpenseTemplate.name = Delete Expense Template
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
