--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -46,12 +46,13 @@ editor.invoice.name = Rechnung ansehen / bearbeiten
 view.clients = Kunden
 view.invoices = Rechnungen
 view.expenses = Ausgaben
+view.expenseTemplates = Ausgabenvorlagen
 
 # WIZARDS
 new.client.wizard.label = Neuer Kunde
 new.invoice.wizard.label = Neue Rechnung
 new.expense.wizard.label = Neue Ausgabe
-new.recurringExpense.wizard.label = Neue wiederkehrende Ausgabe
+new.expenseTemplate.wizard.label = Neue Ausgabenvorlage
 new.taxRate.wizard.label = Neuer Steuersatz
 import.expenses.wizard = Ausgaben importieren
 export.model.wizard = Daten exportieren
@@ -88,6 +89,10 @@ command.changeTimeFrame.lastYear = Letztes Jahr
 command.changeTimeFrame.custom = Auswahl...
 command.expenses.report = Ausgabenbericht Erzeugen
 command.expenseView.menu.pulldown = Expenses Pulldown Menu
+
+# COMMANDS - EXPENSE TEMPLATES
+command.newExpenseTemplate.name = Neue Ausgabenvorlage...
+command.deleteExpenseTemplate.name = Ausgabenvorlage löschen
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
