--- a/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
@@ -209,6 +209,9 @@ DeleteClientCommand_confirmText=Confirm delete
 DeleteExpenseCommand_confirmMessage=Are you sure you want to delete expense \"{0}\"?
 DeleteExpenseCommand_confirmText=Confirm delete
 
+DeleteExpenseTemplateCommand_confirmMessage=Are you sure you want to delete expense template \"{0}\"?
+DeleteExpenseTemplateCommand_confirmText=Confirm delete
+
 DeleteInvoiceCommand_confirmMessage=Are you sure you want to delete invoice [{0}] ?
 DeleteInvoiceCommand_confirmText=Confirm delete
 
@@ -230,6 +233,16 @@ ExpenseEditor_DepreciationCalculatedMessage=A depreciation schedule was calculat
 ExpenseEditor_DepreciationSchedule=Depreciation Schedule
 ExpenseEditor_BeginningBookValue=Book Value
 ExpenseEditor_EndBookValue=End of Year Value
+
+ExpenseTemplateEditHelper_active=Active
+ExpenseTemplateEditHelper_count=Number of times
+ExpenseTemplateEditHelper_forever=Forever
+ExpenseTemplateEditHelper_frequency=Frequency
+ExpenseTemplateEditHelper_interval=Interval
+ExpenseTemplateEditHelper_validFrom=Valid From
+ExpenseTemplateWizard_Title=Expense Template
+ExpenseTemplateWizardPage_Desc=Define the template for a recurring expense
+ExpenseTemplateWizardPage_Title=Expense Template
 
 ExpensesView_title=Expenses ({0})
 ExpensesView_allExpenses= - 
@@ -330,15 +343,6 @@ NewTaxRateWizard_windowTitle=New Tax Rate
 
 RecurrenceRuleWizardPage_Desc=Define the rules when and how often the template should be applied
 RecurrenceRuleWizardPage_Title=Recurrence Rules
-RecurringExpenseEditHelper_active=Active
-RecurringExpenseEditHelper_count=Number of times
-RecurringExpenseEditHelper_forever=Forever
-RecurringExpenseEditHelper_frequency=Frequency
-RecurringExpenseEditHelper_interval=Interval
-RecurringExpenseEditHelper_validFrom=Valid From
-RecurringExpenseWizard_Title=Recurring Expense Template
-RecurringExpenseWizardPage_Desc=Define the template for a recurring expense
-RecurringExpenseWizardPage_Title=Expense Template
 
 ReportGenerationUtil_errorGeneratingInvoice=Error generating PDF for invoice!
 ReportGenerationUtil_errorNoReportingService=Reporting service not found, please check your installation!
