--- a/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages_de.properties
@@ -193,6 +193,9 @@ DeleteClientCommand_confirmText=L\u00F6schen best\u00E4tigen
 DeleteExpenseCommand_confirmMessage=Sind Sie sicher, dass Sie die Ausgabe \"{0}\" l\u00F6schen wollen?
 DeleteExpenseCommand_confirmText=L\u00F6schen best\u00E4tigen
 
+DeleteExpenseTemplateCommand_confirmMessage=Sind Sie sicher, dass Sie die Ausgabenvorlage \"{0}\" l\u00F6schen wollen?
+DeleteExpenseTemplateCommand_confirmText=L\u00F6schen best\u00E4tigen
+
 DeleteInvoiceCommand_confirmMessage=Sind Sie sicher, dass Sie die Rechnung [{0}] l\u00F6schen wollen?
 DeleteInvoiceCommand_confirmText=L\u00F6schen best\u00E4tigen
 
@@ -214,6 +217,16 @@ ExpenseEditor_DepreciationCalculatedMessage=Ein Abschreibungsplan f\u00FCr diese
 ExpenseEditor_DepreciationSchedule=Abschreibungsplan
 ExpenseEditor_BeginningBookValue=Ausgangswert
 ExpenseEditor_EndBookValue=Buchwert
+
+ExpenseTemplateEditHelper_active=Aktiv
+ExpenseTemplateEditHelper_count=Anzahl
+ExpenseTemplateEditHelper_forever=Endlos
+ExpenseTemplateEditHelper_frequency=Frequenz
+ExpenseTemplateEditHelper_interval=Intervall
+ExpenseTemplateEditHelper_validFrom=G\u00FCltig ab
+ExpenseTemplateWizard_Title=Wiederkehrende Ausgabe
+ExpenseTemplateWizardPage_Desc=Vorlage f\u00FCr wiederkehrende Ausgaben definieren
+ExpenseTemplateWizardPage_Title=Ausgabenvorlage
 
 ExpensesView_title=Ausgaben ({0})
 ExpensesView_allExpenses= - 
@@ -314,15 +327,6 @@ NewTaxRateWizard_windowTitle=Neuer Steuersatz
 
 RecurrenceRuleWizardPage_Desc=Regeln zur wiederholten Anwendung der Vorlage definieren.
 RecurrenceRuleWizardPage_Title=Anwendungsregeln
-RecurringExpenseEditHelper_active=Aktiv
-RecurringExpenseEditHelper_count=Anzahl
-RecurringExpenseEditHelper_forever=Endlos
-RecurringExpenseEditHelper_frequency=Frequenz
-RecurringExpenseEditHelper_interval=Intervall
-RecurringExpenseEditHelper_validFrom=G\u00FCltig ab
-RecurringExpenseWizard_Title=Wiederkehrende Ausgabe
-RecurringExpenseWizardPage_Desc=Vorlage f\u00FCr wiederkehrende Ausgaben definieren
-RecurringExpenseWizardPage_Title=Ausgabenvorlage
 
 ReportGenerationUtil_errorGeneratingInvoice=Fehler beim Generieren des PDF Dokuments!
 ReportGenerationUtil_errorNoReportingService=Reporting Service ist nicht verf\u00FCgbar, bitte \u00FCberpr\u00FCfen Sie Ihre Installation!
