--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -95,6 +95,7 @@ command.expenseView.menu.pulldown = Expenses Pulldown Menu
 
 # COMMANDS - EXPENSE TEMPLATES	
 commandCategory.expense.template.name = Expense Template Command Category
+command.viewExpenseTemplates.label = View Expense Templates
 command.newExpenseTemplate.name = New Expense Template...
 command.deleteExpenseTemplate.name = Delete Expense Template
 
