--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -91,6 +91,7 @@ command.expenses.report = Ausgabenbericht Erzeugen
 command.expenseView.menu.pulldown = Expenses Pulldown Menu
 
 # COMMANDS - EXPENSE TEMPLATES
+command.viewExpenseTemplates.label = Ausgabenvorlagen
 command.newExpenseTemplate.name = Neue Ausgabenvorlage...
 command.deleteExpenseTemplate.name = Ausgabenvorlage löschen
 
