added editor for expense templates

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -41,6 +41,7 @@ menu.help.about.label = About
 editor.user.name = User Editor
 editor.client.name = Client Editor
 editor.expense.name = Expense Editor
+editor.expenseTemplate.name = Expense Template Editor
 editor.invoice.name = View / Edit Invoice
 
 # VIEWS
@@ -98,6 +99,7 @@ commandCategory.expense.template.name = Expense Template Command Category
 command.viewExpenseTemplates.label = View Expense Templates
 command.newExpenseTemplate.name = New Expense Template...
 command.deleteExpenseTemplate.name = Delete Expense Template
+command.editExpenseTemplate.name = Edit Expense Template
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
