--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -40,6 +40,7 @@ menu.help.about.label = Über...
 editor.user.name = Benutzer
 editor.client.name = Kunden
 editor.expense.name = Ausgaben
+editor.expenseTemplate.name = Ausgabenvorlagen
 editor.invoice.name = Rechnung ansehen / bearbeiten
 
 # VIEWS
@@ -94,6 +95,7 @@ command.expenseView.menu.pulldown = Expenses Pulldown Menu
 command.viewExpenseTemplates.label = Ausgabenvorlagen
 command.newExpenseTemplate.name = Neue Ausgabenvorlage...
 command.deleteExpenseTemplate.name = Ausgabenvorlage löschen
+command.editExpenseTemplate.name = Ausgabenvorlage bearbeiten
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
