--- a/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
+++ b/accounting-ui/src/de/tfsw/accounting/ui/messages.properties
@@ -34,6 +34,7 @@ iconsRevenue=icons/money_add.png
 iconsExpenses=icons/money_delete.png
 iconsExpenseAdd=icons/tag_blue_add.png
 iconsExpenseEdit=icons/tag_blue_edit.png
+iconsExpenseTemplateEdit=icons/date_edit.png
 iconsReports=icons/report.png
 iconsIncomeStatement=icons/layout_content.png
 iconsIncomeStatementDetails=icons/report_user.png
