added fragment handler for finding applicable templates

--- a/accounting-ui/OSGI-INF/l10n/bundle.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle.properties
@@ -100,6 +100,7 @@ command.viewExpenseTemplates.label = View Expense Templates
 command.newExpenseTemplate.name = New Expense Template...
 command.deleteExpenseTemplate.name = Delete Expense Template
 command.editExpenseTemplate.name = Edit Expense Template
+command.findApplicableExpenseTemplates.name = Find applicable templates...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = View Invoices
