--- a/accounting-ui/OSGI-INF/l10n/bundle_de.properties
+++ b/accounting-ui/OSGI-INF/l10n/bundle_de.properties
@@ -96,6 +96,7 @@ command.viewExpenseTemplates.label = Ausgabenvorlagen
 command.newExpenseTemplate.name = Neue Ausgabenvorlage...
 command.deleteExpenseTemplate.name = Ausgabenvorlage löschen
 command.editExpenseTemplate.name = Ausgabenvorlage bearbeiten
+command.findApplicableExpenseTemplates.name = Anwendbare Vorlagen finden...
 
 # COMMANDS - INVOICE
 command.viewInvoices.label = Rechnungen
