spelling correction for umlauts

--- a/accounting-core/src/de/tfsw/accounting/messages_de.properties
+++ b/accounting-core/src/de/tfsw/accounting/messages_de.properties
@@ -18,7 +18,7 @@
 # Ä = \u00C4
 # ä = \u00E4
 # Ö = \u00D6
-# ö = \u00D6
+# ö = \u00F6
 # Ü = \u00DC
 # ü = \u00FC
 
@@ -104,7 +104,7 @@ ExpenseType_OTHER=Sonstige Ausgaben
 # Frequency types
 ###############################################################################
 Frequency_DAILY=T\u00E4glich
-Frequency_WEEKLY=W\u00D6chentlich
+Frequency_WEEKLY=W\u00F6chentlich
 Frequency_MONTHLY=Monatlich
 Frequency_YEARLY=J\u00E4hrlich
 
